[package]
name = "PreMiD-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
discord-rpc-client = "0.3.0"
serde = { version = "1.0.164",  features = ["derive"] }
serde_json = "1.0.96"
socketioxide = {path = "../socketioxide/socketioxide", features = ["v4"], default-features = false}
tokio = {version = "1.28.2", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
