[package]
name = "PreMiD-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.164",  features = ["derive"] }
serde_json = "1.0.96"
socketioxide = {git = "https://github.com/sleeyax/socketioxide.git", rev = "e45263bddf82f7578617eeac98ba2fe05ca417ed", features = ["v4"], default-features = false}
tokio = {version = "1.28.2", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
discord-rich-presence = { git = "https://github.com/sardonicism-04/discord-rich-presence.git", rev = "0dc67a5ec617c045131d358b06068887bebcc4f8" }
